<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mufflefurnace.SettingsActivityOld">


    <LinearLayout
        android:id="@+id/settings_max_temperature"
        style="@style/SettingsScreenLinearLayout">

        <TextView
            android:id="@+id/settings_max_temperature_description_short"
            style="@style/SettingsScreenTextTopic"
            android:text="@string/settings_max_temperature"
            />
        <TextView
            android:id="@+id/settings_max_temperature_value"
            style="@style/SettingsScreenTextValue"
            />

        <View style="@style/Divider"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_hearing"
        style="@style/SettingsScreenLinearLayout">

        <TextView
            android:id="@+id/settings_hearing_description_short"
            style="@style/SettingsScreenTextTopic"
            android:text="@string/settings_max_heating_rate"
            />
        <TextView
            android:id="@+id/settings_hearing_value"
            style="@style/SettingsScreenTextValue"
            android:text="0"/>

        <View style="@style/Divider"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_cooling"
        style="@style/SettingsScreenLinearLayout">

        <TextView
            android:id="@+id/settings_cooling_description_short"
            style="@style/SettingsScreenTextTopic"
            android:text="@string/settings_max_cooling_rate"
            />
        <TextView
            android:id="@+id/settings_cooling_value"
            style="@style/SettingsScreenTextValue"
            android:text="0"/>

        <View style="@style/Divider"/>
    </LinearLayout>



</LinearLayout>
