<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuPhone"
    android:orientation="vertical"
    tools:context="com.example.android.mufflefurnace.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="LOGO" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:id="@+id/menu_connect"
            style="@style/MainScreenMenu"
            >

            <ImageView
                android:id="@+id/menu_connect_image"
                style="@style/MaineScreenIcon"
                android:src="@drawable/ic_settings_ethernet_white_36dp"
                />

            <TextView
                android:id="@+id/menu_connect_text"
                style="@style/MainScreenMenuText"

                android:text="@string/main_menu_connect" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/menu_programs"
            style="@style/MainScreenMenu">

            <ImageView
                android:id="@+id/menu_programs_image"
                style="@style/MaineScreenIcon"
                android:layout_toLeftOf="@id/menu_programs_text"
                android:src="@drawable/ic_format_list_bulleted_white_36dp" />


            <TextView
                android:id="@+id/menu_programs_text"
                style="@style/MainScreenMenuText"
                android:text="@string/main_menu_programs" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_archive"
            style="@style/MainScreenMenu"
            android:drawSelectorOnTop="true">

            <ImageView
                android:id="@+id/menu_archive_image"
                style="@style/MaineScreenIcon"
                android:src="@drawable/ic_archive_white_36dp" />

            <TextView
                android:id="@+id/menu_archive_text"
                style="@style/MainScreenMenuText"
                android:text="@string/main_menu_archive" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_settings"
            style="@style/MainScreenMenu"
            android:drawSelectorOnTop="true">

            <ImageView
                android:id="@+id/menu_settings_image"
                style="@style/MaineScreenIcon"
                android:layout_toLeftOf="@id/menu_settings_text"
                android:src="@drawable/ic_settings_white_36dp" />

            <TextView
                android:id="@+id/menu_settings_text"
                style="@style/MainScreenMenuText"
                android:text="@string/main_menu_settings" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
