<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.mufflefurnace.ProgramViewActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/archive_graph_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

        <TextView
            android:id="@+id/archive_program_view_Info_graph_text"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/absoluteWhite"
            android:fontFamily="sans-serif-medium"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/program_view_program_should_contain"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:visibility="invisible"
            tools:text="program_view_program_should_contain" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        >

        <TextView
            style="@style/Program_view_edit_time_temperature"
            android:layout_height="wrap_content"
            android:text="@string/program_view_edit_time"
            />

        <TextView
            style="@style/Program_view_edit_time_temperature"
            android:layout_height="wrap_content"
            android:text="@string/program_view_edit_temperature"
            />
        <TextView
            android:id="@+id/program_view_vent"
            style="@style/Program_view_edit_time_temperature"
            android:layout_height="wrap_content"
            android:text="@string/program_view_edit_vent"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" />
    <!-- android:padding="@dimen/activity_margin"  -->
    </LinearLayout>
</ScrollView>

<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"></android.support.design.widget.AppBarLayout>


</LinearLayout>
