<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mufflefurnace.ProgramViewActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/main_screen_item_height">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph_view"
            android:layout_width="match_parent"
            android:layout_height="300dp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Program_view_edit_time_temperature"
                android:text="@string/program_view_edit_time" />

            <TextView
                style="@style/Program_view_edit_time_temperature"
                android:text="@string/program_view_edit_temperature" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_view_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/start"
        style="@style/MainScreenMenu"
        android:layout_alignParentBottom="true"
        android:drawSelectorOnTop="true">

        <TextView
            android:id="@+id/start1"
            style="@style/MainScreenMenuText"
            android:text="@string/program_view_start"
            android:textAllCaps="true" />
    </RelativeLayout>


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"></android.support.design.widget.AppBarLayout>


</RelativeLayout>
