<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.mufflefurnace.ProgramEditActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Program_view_edit_time_temperature"
            android:text="@string/program_view_edit_time"/>

        <TextView
            style="@style/Program_view_edit_time_temperature"
            android:text="@string/program_view_edit_temperature"/>

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProgramsEditActivity">

        <ListView
            android:id="@+id/list_view_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin" />

        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/empty_shelter_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_empty_shelter" />

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_shelter_image"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="16dp"
                android:text="@string/empty_view_title_text"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="Some text" />

            <TextView
                android:id="@+id/empty_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_title_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="8dp"
                android:text="@string/empty_view_points_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0"
                tools:text="Subtitle" />
        </RelativeLayout>
    </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_program_edit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/menuPrimary" />


</android.support.design.widget.CoordinatorLayout>
